--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "firebase": "^7.23.0",
     "npm-run-all": "^4.1.5",
     "react": "^16.13.1",
+    "react-datepicker": "^3.2.2",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.9.2",
     "react-modal": "^3.11.2",
